hphp/hack/test/typecheck/expression_trees/await_in_splice_xhp_cond.php.exp
ERROR: File "await_in_splice_xhp_cond.php", line 21, characters 10-60:
Cannot use unstable feature: `allow_conditional_await_syntax` (Parsing[1002])
